# halcon_pose_estimation

./: CMakeLists.txt  README.md  package.xml
data/output/: transformed.stl
include/halcon_pose_estimation/: halcon_io.h  halcon_object_model.h  halcon_pose_conversion.h  halcon_surface_detection_params.hpp  halcon_surface_matching.h  halcon_surface_model.h  pcl_file_handler.h  pcl_filtering.h  pcl_viz.h  pose_result_handler.h
include/matching_config/: read_match_config.h
models/: MG1.stl
src/: test_edge_matching.cpp  test_regular_matching.cpp  test_surface_model_creator.cpp
src/halcon_pose_estimation/: halcon_io.cpp  halcon_object_model.cpp  halcon_pose_conversion.cpp  halcon_surface_matching.cpp  halcon_surface_model.cpp  pcl_file_handler.cpp  pcl_filtering.cpp  pcl_viz.cpp  pose_result_handler.cpp
src/matching_config/: calibdata.txt  default_matching_config.yml  read_match_config.cpp  write_match_config.cpp
